--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,42 +1,31 @@
 {
   "env": {
-    "es6": true,
-    "node": true,
-    "jest": true
+      "es6": true,
+      "node": true,
+      "jest": true
   },
   "extends": [
-    "airbnb-base",
-    "plugin:@typescript-eslint/recommended",
-    "prettier/@typescript-eslint",
-    "plugin:prettier/recommended"
+      "airbnb-base",
+      "plugin:prettier/recommended"
   ],
-  "globals": {
-    "Atomics": "readonly",
-    "SharedArrayBuffer": "readonly"
-  },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaVersion": 2018,
-    "sourceType": "module"
+      "ecmaVersion": 12,
+      "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint", "prettier"],
+  "plugins": [
+      "@typescript-eslint",
+      "prettier"
+  ],
   "rules": {
-    "@typescript-eslint/no-unused-vars": [
-      "error",
-      {
-        "argsIgnorePattern": "_"
-      }
-    ],
+    "no-unused-vars": "off",
+    "camelcase": "off",
+    "no-empty-function": "off",
+    "import/prefer-default-export": "off",
     "no-useless-constructor": "off",
-    "@typescript-eslint/interface-name-prefix": [
-      "error",
-      {
-        "prefixWithI": "always"
-      }
-    ],
-    "@typescript-eslint/camelcase": "off",
     "prettier/prettier": "error",
-    "class-methods-use-this": "off",
+    "import/no-unresolved": "off",
+    "class-methods-use-this":"off",
     "import/extensions": [
       "error",
       "ignorePackages",
@@ -46,8 +35,18 @@
     ]
   },
   "settings": {
-    "import/resolver": {
-      "typescript": {}
+    "import/resolver":{
+      "node": {
+        "extensions": [".ts", ".tsx"]
+      }
     }
-  }
+  },
+  "overrides": [
+    {
+      "files": ["**/__tests__/**/*.spec.ts?(x)"],
+      "env": {
+        "jest": true
+      }
+    }
+  ]
 }
