--- a/package.json
+++ b/package.json
@@ -21,15 +21,16 @@
     "reflect-metadata": "^0.1.10",
     "tsyringe": "^4.2.0",
     "typeorm": "0.2.24",
-    "uuidv4": "^6.2.3"
+    "uuidv4": "^6.2.3",
+    "yup": "^0.32.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
-    "@types/jsonwebtoken": "^8.5.0",
     "@types/cors": "^2.8.6",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.6",
     "@types/jest": "^25.2.1",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^8.0.29",
     "@types/supertest": "^2.0.9",
     "@typescript-eslint/eslint-plugin": "^2.31.0",
