--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "dev:server": "cross-env NODE_ENV=development ts-node-dev -r tsconfig-paths/register --inspect --transpileOnly --ignore-watch node_modules src/shared/infra/http/server.ts",
     "typeorm": "cross-env NODE_ENV=development ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config src/config/ormconfig.ts",
-    "test": "cross-env NODE_ENV=development jest"
+    "test": "cross-env NODE_ENV=development jest --runInBand --detectOpenHandles"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
@@ -16,6 +16,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "faker": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.1.0",
     "reflect-metadata": "^0.1.10",
@@ -29,6 +30,7 @@
     "@types/cors": "^2.8.6",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.6",
+    "@types/faker": "^5.1.5",
     "@types/jest": "^25.2.1",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^8.0.29",
