Add entity Admin and migration.

--- a/.env.development
+++ b/.env.development
@@ -1,8 +1,10 @@
 #JWT TOKEN
 JWT_SECRET_TOKEN=UmFxdWVs
+JWT_SECRET_TOKEN_ADMIN=VGhhbXlyZXo=
 
 # BCRYPT
 BCRYPT_SALT_ROUNDS=5
+BCRYPT_SALT_ROUNDS_ADMIN=5
 
 # TYPEORM
 TYPEORM_CONNECTION=postgres
