--- a/.env.development
+++ b/.env.development
@@ -18,3 +18,6 @@ TYPEORM_DATABASE=jjconceito
 TYPEORM_ENTITIES=./src/modules/**/infra/typeorm/entities/*.ts
 TYPEORM_MIGRATIONS=./src/shared/infra/typeorm/migrations/*.ts
 TYPEORM_MIGRATIONS_DIR=./src/shared/infra/typeorm/migrations
+
+# ACCESS LEVELS
+ADMIN_ACCESS_LEVEL=1
